A little bit of adaptivity added + primitive preventing for usage on mobile devices for now

--- a/src/components/screens/games/GameContainer.css
+++ b/src/components/screens/games/GameContainer.css
@@ -2,7 +2,7 @@ div.gamecontainer {
     display: flex;
     margin: 0 auto;
     width: 220vw;
-    height: 80vh;
+    height: 38.5vw;
     padding: 0;
     justify-content: center;
     align-items: center;
@@ -15,4 +15,8 @@ div.home, div.contact {
     flex-direction: column;
     row-gap: 3vh;
     border: solid 1px;
+}
+
+.home p, .contact{
+    font-size: 1vw;
 }
