--- a/src/components/screens/games/kana/Game.css
+++ b/src/components/screens/games/kana/Game.css
@@ -27,13 +27,13 @@
     border-radius: 30px;
     box-shadow: 0px 5px 0px #c73153;
     width: 8vw;
-    height: 6vh;
+    height: 2.5vw;
     text-decoration: none;
     cursor: pointer;
     color: #c71b43;
     background-color: white;
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
-    font-size: 3vh;
+    font-size: 1.5vw;
 }
 
 .startbutton:hover,
@@ -52,7 +52,8 @@
     align-items: center;
     row-gap: 14vh;
     position: relative;
-    transition:  background-color 0.2s ease; /*Правильный ответ*/
+    transition: background-color 0.2s ease;
+    /*Правильный ответ*/
 }
 
 .endbutton {
@@ -84,6 +85,8 @@
 }
 
 .answerrow {
+    position: absolute;
+    bottom: 15%;
     display: flex;
     justify-content: center;
     column-gap: 5vw;
@@ -122,6 +125,11 @@
     background-color: white;
 }
 
+#scalable {
+    position: absolute;
+    top: 20%;
+}
+
 /*2nd Game*/
 .questionrow {
     display: flex;
@@ -146,6 +154,17 @@
 }
 
 /*3rd Game*/
+.answerform {
+    position: absolute;
+    bottom: 15%;
+    width: 10vw;
+    height: 5vw;
+}
+
+#answerlabel {
+    font-size: 1vw;
+}
+
 .inputanswer {
     width: 10vw;
     height: 3vw;
