--- a/src/components/screens/visuals/FallingLeaves.css
+++ b/src/components/screens/visuals/FallingLeaves.css
@@ -5,7 +5,7 @@
 
 .forest {
     width: 100%;
-    height: 80vh;
+    height: 40vw;
 }
 
 .leavesgroup {
@@ -44,6 +44,8 @@
 
 .leaf {
     position: relative;
+    width: 6vw;
+    height: auto;
 }
 
 .leaf1 {
